  (Vincent Ladeuil, #529968)

* ``bzr upgrade`` now names backup directory as ``backup.bzr.~N~`` instead
  of ``backup.bzr``. This directory is ignored by bzr commands such as
  ``add``.
  (Parth Malwankar, #335033, #300001)

* Correctly interpret "451 Rename/move failure: Directory not empty" from
  ftp servers while trying to take a lock.
  (Martin Pool, #528722)

* Network transfer amounts and rates are now displayed in SI units according
  to the Ubuntu Units Policy <https://wiki.ubuntu.com/UnitsPolicy>.
  (Gordon Tyler, #514399)

* Support kind markers for socket and fifo filesystem objects. This
  prevents ``bzr status --short`` from crashing when those files are
  present.  (John Arbash Meinel, #303275)

* Tolerate patches with leading noise in ``bzr-handle-patch``.
  (Toshio Kuratomi, Martin Pool, #502076)

* SSH child processes will now ignore SIGQUIT on nix systems so breaking into
  the debugger won't kill the session.
  (Martin <gzlist@googlemail.com>, #162502)

API Changes
***********

* New ``bzrlib.initialize`` is recommended for programs using bzrlib to 
  run when starting up; it sets up several things that previously needed
  to be done separately.
  (Martin Pool, #507710)

* Remove unused ``CommandFailed`` exception.
  (Martin Pool)

Internals
*********

* ``bzrlib.branchbuilder.BranchBuilder.build_snapshot`` now accepts a
  ``message_callback`` in the same way that commit does. (Robert Collins)

* ``bzrlib.commands.run_bzr`` is more extensible: callers can supply the
  functions to load or disable plugins if they wish to use a different
  plugin mechanism; the --help, --version and no-command name code paths
  now use the generic pluggable command lookup infrastructure.
  (Robert Collins)

Testing
*******

* bzr now has a ``.testr.conf`` file in its source tree configured
  appropriately for running tests with Testrepository
  (``https://launchpad.net/testrepository``). (Robert Collins)
